--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "axios": "^1.6.7",
     "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "typescript": "^5"
