--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "inputmask": "^5.0.8",
+    "jquery": "^3.7.1",
     "next": "14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.5",
+    "sass": "^1.72.0"
   },
   "devDependencies": {
+    "@types/inputmask": "^5.0.7",
+    "@types/jquery": "^3.5.29",
     "@types/node": "^20",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
